bridge/base/0-php-namespace.yaml
#! 0-php-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: php
    labels:
        com.docker.compose.project: php
