bridge/base/nginx-deployment.yaml
#! nginx-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: php
    labels:
        com.docker.compose.project: php
        com.docker.compose.service: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: php
            com.docker.compose.service: nginx
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: php
                com.docker.compose.service: nginx
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: nginx
                  image: nginx:1.21.1
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: nginx-80
                      containerPort: 80
                  volumeMounts:
                    - name: etc-nginx-conf-d-default-conf
                      mountPath: /etc/nginx/conf.d/default.conf
                    - name: var-www
                      mountPath: /var/www
            volumes:
                - name: etc-nginx-conf-d-default-conf
                  hostPath:
                    path: /Users/kanae/coachtech/php/docker/nginx/default.conf
                - name: var-www
                  hostPath:
                    path: /Users/kanae/coachtech/php/src
