bridge/base/php-expose.yaml
#! php-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: php
    namespace: php
    labels:
        com.docker.compose.project: php
        com.docker.compose.service: php
spec:
    selector:
        com.docker.compose.project: php
        com.docker.compose.service: php
    ports:
        - name: php-9000
          port: 9000
          targetPort: php-9000
